Fix help text alignment

--- a/src/styles/components/user/_edit-form.scss
+++ b/src/styles/components/user/_edit-form.scss
@@ -5,9 +5,5 @@
 
   .form-group {
     padding-bottom: 0;
-
-    .select-box-tooltip {
-      padding-left: 25px;
-    }
   }
 }
